--- a/index.html
+++ b/index.html
@@ -1,115 +1,71 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR" data-theme="light">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Norti Design — Portfólio</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, Helvetica, sans-serif;
-            background: #ffffff;
-            color: #111;
-            line-height: 1.6;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Norti Design</title>
 
-        header {
-            padding: 40px;
-            text-align: center;
-        }
+  <!-- CSS Globais e separados por seção -->
+  <link rel="stylesheet" href="css/global.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/hero.css">
+  <link rel="stylesheet" href="css/services.css">
+  <link rel="stylesheet" href="css/portfolio.css">
+  <link rel="stylesheet" href="css/process.css">
+  <link rel="stylesheet" href="css/prices.css">
+  <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/about.css">
+  <link rel="stylesheet" href="css/cta.css">
 
-        header h1 {
-            font-size: 32px;
-            margin: 0;
-            font-weight: 600;
-            letter-spacing: -1px;
-        }
-
-        header p {
-            margin: 8px 0 0;
-            font-size: 16px;
-            color: #444;
-        }
-
-        section {
-            max-width: 900px;
-            margin: 60px auto;
-            padding: 0 20px;
-        }
-
-        h2 {
-            font-size: 22px;
-            margin-bottom: 16px;
-            font-weight: 600;
-        }
-
-        .portfolio-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-            gap: 24px;
-        }
-
-        .card {
-            border: 1px solid #e5e5e5;
-            border-radius: 8px;
-            padding: 20px;
-            transition: 0.2s ease;
-        }
-
-        .card:hover {
-            border-color: #000;
-        }
-
-        .card img {
-            width: 100%;
-            border-radius: 6px;
-            margin-bottom: 12px;
-        }
-
-        footer {
-            text-align: center;
-            padding: 40px;
-            color: #555;
-            font-size: 14px;
-        }
-    </style>
+  <!-- Fonte Anek Latin -->
+  <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
-
 <body>
-    <header>
-        <h1>Norti Design</h1>
-        <p>Identidade Visual • UI/UX • Modelagem 3D</p>
-    </header>
 
-    <section>
-        <h2>Sobre</h2>
-        <p>
-            A Norti Design é um estúdio independente especializado em identidade visual,
-            experiência do usuário e modelagem 3D. Atuamos com design estratégico,
-            prototipagem e soluções visuais que conectam marcas e pessoas.
-        </p>
+  <!-- HEADER -->
+  <header class="site-header">
+    <div class="container">
+      <div class="logo">
+        <img src="img/light-logo-norti-design.png" alt="Norti Design Logo" id="logo-img">
+      </div>
+      <nav class="site-nav">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">Sobre</a></li>
+          <li><a href="projects.html">Projetos</a></li>
+        </ul>
+      </nav>
+      <button id="theme-toggle">🌙 / ☀️</button>
+    </div>
+  </header>
+
+  <!-- MAIN -->
+  <main>
+    <section class="hero">
+      <div class="container">
+        <h1>Bem-vindo à Norti Design</h1>
+        <p>Seu site moderno com tema claro/escuro e CSS modular.</p>
+      </div>
     </section>
 
-    <section>
-        <h2>Portfólio</h2>
-        <div class="portfolio-grid">
-            <div class="card">
-                <img src="https://via.placeholder.com/600x400" alt="">
-                <p>Projeto 1 — Identidade Visual</p>
-            </div>
-            <div class="card">
-                <img src="https://via.placeholder.com/600x400" alt="">
-                <p>Projeto 2 — UI/UX Design</p>
-            </div>
-            <div class="card">
-                <img src="https://via.placeholder.com/600x400" alt="">
-                <p>Projeto 3 — Modelagem 3D</p>
-            </div>
-        </div>
+    <section class="services">
+      <div class="container">
+        <h2>Nossos Serviços</h2>
+        <p>Espaço reservado para começar a popular seu site.</p>
+      </div>
     </section>
+  </main>
 
-    <footer>
-        © 2025 Norti Design — Todos os direitos reservados
-    </footer>
+  <!-- FOOTER -->
+  <footer class="site-footer">
+    <div class="container">
+      <p>© 2025 Norti Design. Todos os direitos reservados.</p>
+    </div>
+  </footer>
+
+  <!-- JS -->
+  <script src="js/theme.js"></script>
+  <script src="js/scripts.js"></script>
 </body>
 </html>
