--- a/index.html
+++ b/index.html
@@ -1,71 +1,72 @@
 <!DOCTYPE html>
 <html lang="pt-BR" data-theme="light">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Norti Design</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Norti Design</title>
 
-  <!-- CSS Globais e separados por seção -->
-  <link rel="stylesheet" href="css/global.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/header.css">
-  <link rel="stylesheet" href="css/hero.css">
-  <link rel="stylesheet" href="css/services.css">
-  <link rel="stylesheet" href="css/portfolio.css">
-  <link rel="stylesheet" href="css/process.css">
-  <link rel="stylesheet" href="css/prices.css">
-  <link rel="stylesheet" href="css/footer.css">
-  <link rel="stylesheet" href="css/about.css">
-  <link rel="stylesheet" href="css/cta.css">
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
 
-  <!-- Fonte Anek Latin -->
-  <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="src/icons/nortiIcons.css">
+
+    <link rel="stylesheet" href="src/components/norti-cards/norti-cardDefault.css">
+    <link rel="stylesheet" href="src/components/norti-header/norti-header.css">
+
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/footer.css">
+
+    <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
-  <!-- HEADER -->
-  <header class="site-header">
-    <div class="container">
-      <div class="logo">
-        <img src="img/light-logo-norti-design.png" alt="Norti Design Logo" id="logo-img">
-      </div>
-      <nav class="site-nav">
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">Sobre</a></li>
-          <li><a href="projects.html">Projetos</a></li>
-        </ul>
-      </nav>
-      <button id="theme-toggle">🌙 / ☀️</button>
-    </div>
-  </header>
+    <!-- NOVO HEADER COMPONENTIZADO -->
+    <norti-header logo="Norti Design" fixed="true">
+        <a href="#services">Serviços</a>
+        <a href="#portfolio">Portfólio</a>
+        <a href="#contact" class="btn-primary">Contato</a>
+    </norti-header>
 
-  <!-- MAIN -->
-  <main>
-    <section class="hero">
-      <div class="container">
-        <h1>Bem-vindo à Norti Design</h1>
-        <p>Seu site moderno com tema claro/escuro e CSS modular.</p>
-      </div>
-    </section>
 
-    <section class="services">
-      <div class="container">
-        <h2>Nossos Serviços</h2>
-        <p>Espaço reservado para começar a popular seu site.</p>
-      </div>
-    </section>
-  </main>
+    <!-- MAIN -->
+    <main>
+        <section class="hero">
+            <div class="container">
+                <h1>Bem-vindo à Norti Design</h1>
+                <p>Seu site moderno com tema claro/escuro e CSS modular.</p>
+            </div>
+        </section>
 
-  <!-- FOOTER -->
-  <footer class="site-footer">
-    <div class="container">
-      <p>© 2025 Norti Design. Todos os direitos reservados.</p>
-    </div>
-  </footer>
+        <!-- EXEMPLOS DE COMPONENTES -->
+        <norti-card title="Design Profissional" icon="sun">
+            <span>Eu crio identidades visuais modernas e minimalistas.</span>
+        </norti-card>
 
-  <!-- JS -->
-  <script src="js/theme.js"></script>
-  <script src="js/scripts.js"></script>
+        <norti-card title="UI/UX">
+            Interfaces intuitivas e fluxos bem construídos.
+        </norti-card>
+
+        <section class="services">
+            <div class="container">
+                <h2>Nossos Serviços</h2>
+                <p>Espaço reservado para começar a popular seu site.</p>
+            </div>
+        </section>
+    </main>
+
+
+    <!-- FOOTER -->
+    <footer class="site-footer">
+        <div class="container">
+            <p>© 2025 Norti Design. Todos os direitos reservados.</p>
+        </div>
+    </footer>
+
+    <script type="module" src="src/icons/nortiIcons.js"></script>
+    <script type="module" src="src/components/norti-cards/norti-cardDefault.js"></script>
+    <script type="module" src="src/components/norti-header/norti-header.js"></script>
+
 </body>
+
 </html>
