hero added and fix header

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="src/components/norti-header/norti-header.css">
 
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="css/footer.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@400;600;700&display=swap" rel="stylesheet">
@@ -22,20 +23,19 @@
 <body>
 
     <!-- NOVO HEADER COMPONENTIZADO -->
-    <norti-header logo="Norti Design" fixed="true">
-        <a href="#services">Serviços</a>
-        <a href="#portfolio">Portfólio</a>
-        <a href="#contact" class="btn-primary">Contato</a>
-    </norti-header>
+    <norti-header logo="Norti Design" fixed="true"></norti-header>
 
 
     <!-- MAIN -->
     <main>
-        <section class="hero">
+        <section class="norti-hero">
+            <div class="norti-noise"></div>
+            <div class="norti-light-green"></div>
             <div class="container">
                 <h1>Bem-vindo à Norti Design</h1>
                 <p>Seu site moderno com tema claro/escuro e CSS modular.</p>
             </div>
+            <div class="norti-hero-fade"></div>
         </section>
 
         <!-- EXEMPLOS DE COMPONENTES -->
