--- a/index.html
+++ b/index.html
@@ -1,115 +1,55 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Norti Design — Portfólio</title>
+    <title>Norti Design — Em Construção</title>
     <style>
         body {
             margin: 0;
-            font-family: Arial, Helvetica, sans-serif;
-            background: #ffffff;
+            padding: 0;
+            font-family: 'Arial', sans-serif;
+            background: #f9f9f9;
             color: #111;
-            line-height: 1.6;
-        }
-
-        header {
-            padding: 40px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
             text-align: center;
         }
 
-        header h1 {
-            font-size: 32px;
-            margin: 0;
-            font-weight: 600;
+        h1 {
+            font-size: 48px;
+            margin-bottom: 16px;
+            font-weight: 700;
             letter-spacing: -1px;
         }
 
-        header p {
-            margin: 8px 0 0;
-            font-size: 16px;
-            color: #444;
+        p {
+            font-size: 18px;
+            color: #555;
+            margin: 0;
         }
 
-        section {
-            max-width: 900px;
-            margin: 60px auto;
-            padding: 0 20px;
-        }
-
-        h2 {
-            font-size: 22px;
-            margin-bottom: 16px;
-            font-weight: 600;
-        }
-
-        .portfolio-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-            gap: 24px;
-        }
-
-        .card {
-            border: 1px solid #e5e5e5;
-            border-radius: 8px;
-            padding: 20px;
-            transition: 0.2s ease;
-        }
-
-        .card:hover {
-            border-color: #000;
-        }
-
-        .card img {
-            width: 100%;
-            border-radius: 6px;
-            margin-bottom: 12px;
+        .emoji {
+            font-size: 64px;
+            margin-bottom: 20px;
         }
 
         footer {
-            text-align: center;
-            padding: 40px;
-            color: #555;
+            position: absolute;
+            bottom: 20px;
             font-size: 14px;
+            color: #888;
         }
     </style>
 </head>
-
 <body>
-    <header>
-        <h1>Norti Design</h1>
-        <p>Identidade Visual • UI/UX • Modelagem 3D</p>
-    </header>
+    <div class="emoji">🚧</div>
+    <h1>Site em Construção</h1>
+    <p>Estamos trabalhando para criar algo incrível! Volte em breve.</p>
 
-    <section>
-        <h2>Sobre</h2>
-        <p>
-            A Norti Design é um estúdio independente especializado em identidade visual,
-            experiência do usuário e modelagem 3D. Atuamos com design estratégico,
-            prototipagem e soluções visuais que conectam marcas e pessoas.
-        </p>
-    </section>
-
-    <section>
-        <h2>Portfólio</h2>
-        <div class="portfolio-grid">
-            <div class="card">
-                <img src="https://via.placeholder.com/600x400" alt="">
-                <p>Projeto 1 — Identidade Visual</p>
-            </div>
-            <div class="card">
-                <img src="https://via.placeholder.com/600x400" alt="">
-                <p>Projeto 2 — UI/UX Design</p>
-            </div>
-            <div class="card">
-                <img src="https://via.placeholder.com/600x400" alt="">
-                <p>Projeto 3 — Modelagem 3D</p>
-            </div>
-        </div>
-    </section>
-
-    <footer>
-        © 2025 Norti Design — Todos os direitos reservados
-    </footer>
+    <footer>© 2025 Norti Design — Todos os direitos reservados</footer>
 </body>
 </html>
