projects page added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <link rel="stylesheet" href="src/icons/nortiIcons.css">
 
     <link rel="stylesheet" href="src/components/norti-cards/norti-card.css">
+    <link rel="stylesheet" href="src/components/norti-form/norti-form.css">
     <link rel="stylesheet" href="src/components/norti-header/norti-header.css">
+    <link rel="stylesheet" href="src/components/norti-footer/norti-footer.css">
+
 
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="style.css">
@@ -42,19 +45,20 @@
 
         <div class="norti-cards-container"></div>
 
+        <!-- <norti-form></norti-form> -->
+
     </main>
 
 
-    <!-- FOOTER -->
-    <footer class="site-footer">
-        <div class="container">
-            <p>© 2025 Norti Design. Todos os direitos reservados.</p>
-        </div>
-    </footer>
+    <norti-footer year="2025" instagram="https://instagram.com/nortidesign"
+        linkedin="https://www.linkedin.com/company/nortidesign">
+    </norti-footer>
 
     <script type="module" src="src/icons/nortiIcons.js"></script>
-    <script type="module" src="src/components/norti-cards/norti-card.js"></script>
     <script type="module" src="src/components/norti-header/norti-header.js"></script>
+    <script type="module" src="src/components/norti-cards/norti-card.js"></script>
+    <script src="src/components/norti-form/norti-form.js"></script>
+    <script type="module" src="src/components/norti-footer/norti-footer.js"></script>
 
 </body>
 
