--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <script src="src/components/norti-form/norti-form.js"></script>
     <script type="module" src="src/components/norti-footer/norti-footer.js"></script>
 
+    <script src="src/smooth-scroll.js"></script>
 </body>
 
 </html>
