--- a/src/projects/project.html
+++ b/src/projects/project.html
@@ -62,6 +62,8 @@
     <!-- SCRIPT DINÂMICO DO PROJETO -->
     <script type="module" src="./project.js"></script>
 
+    <script src="src/smooth-scroll.js"></script>
+
 </body>
 
 </html>
