--- a/src/projects/project.html
+++ b/src/projects/project.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto Dinâmico</title>
+    <title>Norti Design</title>
 
-    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
 
     <!-- Estilos dos componentes Norti -->
     <link rel="stylesheet" href="../icons/nortiIcons.css">
